--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -7,3 +7,8 @@
   justify-content: space-between;
   list-style: none;
 }
+
+/* You can add global class that all files can access using :global function */
+:global(.test) {
+  background-color: rebeccapurple;
+}
